Serverless configured cloudwatch event

--- a/02-notifon/notifier/serverless.yml
+++ b/02-notifon/notifier/serverless.yml
@@ -62,6 +62,16 @@ provider:
 functions:
   hello:
     handler: handler.hello
+    events:
+      - cloudwatchEvent:
+          event:
+            source:
+              - "aws.autoscaling"
+            detail-type:
+              - "EC2 Instance Launch Successful"
+            detail:
+              AutoScalingGroupName:
+                - "Notifon ASG"
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
